--- a/client/src/parts/hero/hero.css
+++ b/client/src/parts/hero/hero.css
@@ -7,6 +7,7 @@
    align-items: center;
    flex-direction: column;
    font-family: 'Open Sans', sans-serif;
+   color: #444;
 }
 
 .heroTitleSm {
@@ -23,7 +24,7 @@
 
 .heroImg {
    width: 100%;
-   height: 460px;
+   height: 450px;
    margin-top: 80px;
    object-fit: cover;
 }
