--- a/client/src/parts/topbar/topbar.css
+++ b/client/src/parts/topbar/topbar.css
@@ -1,12 +1,13 @@
 .top {
    width: 100%;
-   height: 50px;
+   height: 60px;
    font-family: 'Open Sans', sans-serif;
    position: sticky;
    top: 0;
    background-color: white;
    display: flex;
    align-items: center;
+   z-index: 999;
 }
 
 .topMenu {
@@ -22,6 +23,10 @@
    font-size: 18px;
    font-weight: 300;
    cursor: pointer;
+}
+
+.topMenuItem:hover {
+   color: gray;
 }
 
 .searchIcon {
@@ -47,6 +52,8 @@
    height: 40px;
    border-radius: 50%;
    object-fit: cover;
+   margin-right: 15px;
+   cursor: pointer;
 }
 
 .topIcon {
