--- a/client/src/parts/sidebar/sidebar.css
+++ b/client/src/parts/sidebar/sidebar.css
@@ -30,10 +30,17 @@
    font-weight: 600;
 }
 
-.sidebarItem>img {
+.sidebarImgWrapper {
+   border-radius: 50%;
    margin-top: 15px;
    width: 250px;
    height: 250px;
+   overflow: hidden;
+}
+
+.sidebarImgWrapper>img {
+   width: 250px;
+   height: auto;
 }
 
 .sidebarItem>p {
